<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_testDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:layout_marginBottom="@dimen/element_vertical_margin"/>

    <RadioGroup
        android:id="@+id/rg_test_mode"
        android:orientation="horizontal"
        android:checkedButton="@+id/rb_testing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_testing"
            android:text="@string/rb_testing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/radio_button_margin_right"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_training"
            android:text="@string/rb_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_start"
        android:text="@string/btn_start"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:layout_marginBottom="@dimen/element_vertical_margin"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/ll_training_settings"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.blackteam.testbox.ui.EditableSeekBar
            android:id="@+id/esb_num_training_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:esbTitle="@string/num_questions"/>

    </LinearLayout>


</LinearLayout>